After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 666985 - Nautilus terminated when umount folder
Nautilus terminated when umount folder
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File and Folder Operations
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-12-29 13:39 UTC by Uwe Eggert
Modified: 2012-08-31 20:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't try to close the window when a mount goes away (11.97 KB, patch)
2012-08-31 19:52 UTC, William Jon McCann
committed Details | Review

Description Uwe Eggert 2011-12-29 13:39:09 UTC
In Nautilus a folder is mountet. The file is indicated in Nautilus. As soon as in the console the folder becames unmounted, Nautlius is self terminated.
Comment 1 William Jon McCann 2012-08-31 19:52:31 UTC
Created attachment 223099 [details] [review]
Don't try to close the window when a mount goes away

Go to home instead.
Comment 2 Cosimo Cecchi 2012-08-31 20:00:51 UTC
Review of attachment 223099 [details] [review]:

Looks good

::: src/nautilus-application.c
@@ +1455,2 @@
 	/* Watch for unmounts so we can close open windows */
 	/* TODO-gio: This should be using the UNMOUNTED feature of GFileMonitor instead */

This is fixed by this patch