Don't try to close the window when a mount goes away

Go to home instead.

https://bugzilla.gnome.org/show_bug.cgi?id=666985